--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         />
         <meta
             property="og:image"
-            content="https://i.ibb.co/JQ5R2Wf/Untitled-5.png"
+            content="https://docs.polarisadmin.xyz/assets/img/logonav.png"
         />
         <meta property="og:url" content="https://polarisadmin.xyz" />
         <meta property="og:type" content="website" />
