--- a/index.html
+++ b/index.html
@@ -256,9 +256,9 @@
                 class="logo"
             />
             <nav class="space-x-6">
-                <a href="https://discord.gg/polaris">Status</a>
+                <a href="https://discord.gg/yez9hQgumr">Status</a>
                 <a href="https://docs.polarisadmin.xyz">Documentation</a>
-                <a href="https://discord.gg/polaris">Discord Server</a>
+                <a href="https://discord.gg/yez9hQgumr">Discord Server</a>
             </nav>
         </header>
 
@@ -276,7 +276,7 @@
                     efficient, and gorgeous method of administration.
                 </p>
                 <div class="flex justify-center space-x-4 mt-8">
-                    <a href="https://discord.gg/polaris" class="btn-primary"
+                    <a href="https://discord.gg/yez9hQgumr" class="btn-primary"
                         >Join Discord</a
                     >
                     <a
